tests/type-states.stderr
error: mismatched types
   ┌─ test:17:5
   │
17 │ _ : my-drone . land -- cannot land because drone is already idle
   │     ^^^^^^^^ expected `Drone Hovering`, but found `Drone Idle`
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/mismatched-types

